--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Rob Hinds
-twitter_username: rob_hinds
-name: Rob Hinds
+title: Joe Armitage
+twitter_username: joearmit
+name: Joe Armitage
 
 # Build settings
 markdown: kramdown
